feat(centos): centos 8 is full python3
Since CentOS 8, only python3 is available with packages names starting
by “python3-”.

* libvirt/osmap.yaml (CentOS): assume default CentOS version is 8 and above.

* libvirt/osfingermap.yaml (CentOS Linux-7): special casing older
  version 7.

* test/integration/share/libraries/libvirt.rb (LibvirtResource#build_overwrite_packages):
  build a dedicated packages list for CentOS.
  (LibvirtResource#build_centos_packages): distinguish python3
  packages between CentOS 7 and 8.

--- a/libvirt/osfingermap.yaml
+++ b/libvirt/osfingermap.yaml
@@ -30,3 +30,7 @@ Ubuntu-14.04:
 Ubuntu-16.04:
   libvirt_pkg: libvirt-bin
   libvirt_service: libvirt-bin
+
+## os: CentOS
+CentOS Linux-7:
+  python3_pkg: ~
